results/SVCOMP/conversational/log-ExSymExe21-2024_03_12_01_10_52.txt
class Main {
  static int field;
  static int field2;

  //@ requires \symbolic x;
  //@ ensures \result ==> x >= z;
  //@ ensures !\result ==> x < z;
  public static boolean f() {
    int x = 3; /* we want to specify in an annotation that this param should be
                  symbolic */

    Main inst = new Main();
    field = 9;
    return inst.test(x, field, field2);
  }

  //@ requires \symbolic x;
  //@ requires \symbolic z;
  //@ requires \symbolic r;
  //@ ensures \result ==> x >= z;
  //@ ensures !\result ==> x < z;
  public boolean test(int x, int z, int r) {
    System.out.println("Testing ExSymExe21");
    int y = 3;
    r = x + z;
    z = x - y - 4;
    if (r >= 99) System.out.println("branch FOO1");
    else System.out.println("branch FOO2");
    if (x >= z) System.out.println("branch BOO1");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe21.java:5: error: This backslash token is unknown: \symbolic
  //@ requires \symbolic x;
               ^
/home/max/Documents/JMLGPT/tmp/ExSymExe21.java:17: error: This backslash token is unknown: \symbolic
  //@ requires \symbolic x;
               ^
/home/max/Documents/JMLGPT/tmp/ExSymExe21.java:18: error: This backslash token is unknown: \symbolic
  //@ requires \symbolic z;
               ^
/home/max/Documents/JMLGPT/tmp/ExSymExe21.java:19: error: This backslash token is unknown: \symbolic
  //@ requires \symbolic r;
               ^
4 errors

class Main {
  static int field;
  static int field2;

  //@ requires true;
  //@ ensures \result ==> x >= z;
  //@ ensures !\result ==> x < z;
  public static boolean f() {
    int x = 3; /* we want to specify in an annotation that this param should be
                  symbolic */

    Main inst = new Main();
    field = 9;
    return inst.test(x, field, field2);
  }

  //@ requires true;
  //@ requires true;
  //@ requires true;
  //@ ensures \result ==> x >= z;
  //@ ensures !\result ==> x < z;
  public boolean test(int x, int z, int r) {
    System.out.println("Testing ExSymExe21");
    int y = 3;
    r = x + z;
    z = x - y - 4;
    if (r >= 99) System.out.println("branch FOO1");
    else System.out.println("branch FOO2");
    if (x >= z) System.out.println("branch BOO1");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe21.java:6: error: cannot find symbol
  //@ ensures \result ==> x >= z;
                          ^
  symbol:   variable x
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe21.java:6: error: cannot find symbol
  //@ ensures \result ==> x >= z;
                               ^
  symbol:   variable z
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe21.java:7: error: cannot find symbol
  //@ ensures !\result ==> x < z;
                           ^
  symbol:   variable x
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe21.java:7: error: cannot find symbol
  //@ ensures !\result ==> x < z;
                               ^
  symbol:   variable z
  location: class Main
4 errors

class Main {
  static int field;
  static int field2;

  //@ requires true;
  //@ ensures \result ==> x >= z;
  //@ ensures !\result ==> x < z;
  public static boolean f() {
    int x = 3; /* we want to specify in an annotation that this param should be
                  symbolic */

    Main inst = new Main();
    field = 9;
    return inst.test(x, field, field2);
  }

  //@ requires true;
  //@ requires true;
  //@ requires true;
  //@ ensures \result ==> x >= z;
  //@ ensures !\result ==> x < z;
  public boolean test(int x, int z, int r) {
    System.out.println("Testing ExSymExe21");
    int y = 3;
    r = x + z;
    z = x - y - 4;
    if (r >= 99) System.out.println("branch FOO1");
    else System.out.println("branch FOO2");
    if (x >= z) System.out.println("branch BOO1");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe21.java:6: error: cannot find symbol
  //@ ensures \result ==> x >= z;
                          ^
  symbol:   variable x
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe21.java:6: error: cannot find symbol
  //@ ensures \result ==> x >= z;
                               ^
  symbol:   variable z
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe21.java:7: error: cannot find symbol
  //@ ensures !\result ==> x < z;
                           ^
  symbol:   variable x
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe21.java:7: error: cannot find symbol
  //@ ensures !\result ==> x < z;
                               ^
  symbol:   variable z
  location: class Main
4 errors

class Main {
  static int field;
  static int field2;

  //@ requires true;
  //@ ensures \result ==> field >= field2;
  //@ ensures !\result ==> field < field2;
  public static boolean f() {
    int x = 3; /* we want to specify in an annotation that this param should be
                  symbolic */

    Main inst = new Main();
    field = 9;
    return inst.test(x, field, field2);
  }

  //@ requires true;
  //@ requires true;
  //@ requires true;
  //@ ensures \result ==> x >= z;
  //@ ensures !\result ==> x < z;
  public boolean test(int x, int z, int r) {
    System.out.println("Testing ExSymExe21");
    int y = 3;
    r = x + z;
    z = x - y - 4;
    if (r >= 99) System.out.println("branch FOO1");
    else System.out.println("branch FOO2");
    if (x >= z) System.out.println("branch BOO1");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe21.java:6: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result ==> field >= field2;
                          ^
/home/max/Documents/JMLGPT/tmp/ExSymExe21.java:6: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result ==> field >= field2;
                                   ^
/home/max/Documents/JMLGPT/tmp/ExSymExe21.java:7: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures !\result ==> field < field2;
                           ^
/home/max/Documents/JMLGPT/tmp/ExSymExe21.java:7: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures !\result ==> field < field2;
                                   ^
4 errors

class Main {
  //@ spec_public
  static int field;
  //@ spec_public
  static int field2;

  //@ requires true;
  //@ ensures \result ==> field >= field2;
  //@ ensures !\result ==> field < field2;
  public static boolean f() {
    int x = 3; /* we want to specify in an annotation that this param should be
                  symbolic */

    Main inst = new Main();
    field = 9;
    return inst.test(x, field, field2);
  }

  //@ requires true;
  //@ requires true;
  //@ requires true;
  //@ ensures \result ==> x >= z;
  //@ ensures !\result ==> x < z;
  public boolean test(int x, int z, int r) {
    System.out.println("Testing ExSymExe21");
    int y = 3;
    r = x + z;
    z = x - y - 4;
    if (r >= 99) System.out.println("branch FOO1");
    else System.out.println("branch FOO2");
    if (x >= z) System.out.println("branch BOO1");
    else {
      return false;
    }
    return true;
  }
}
